# space-junk

./: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.ts  webpack.dev.config.ts  webpack.dist.config.ts
protobuf/: satellite.proto
public/: index.html
src/: SatellitePositionDataSet.ts  SatellitesData.ts  SpaceTrack.ts  animation.ts  constants.ts  dateUtils.ts  imageServer.ts  index.ts  io.ts  orb.ts  test  ui.tsx  utils.ts  worker.ts
src/animation/: Color.ts  Earth.ts  EarthGroundFragmentShader.ts  EarthGroundVertexShader.ts  EarthSkyFragmentShader.ts  EarthSkyVertexShader.ts  Moon.ts  Satellite.ts  SatellitePositionState.ts  SatelliteSphereFragmentShader.ts  SatelliteSphereMaterial.ts  SatelliteSphereVertexShader.ts  SatelliteTrailFragmentShader.ts  SatelliteTrailMaterial.ts  SatelliteTrailVertexShader.ts  Satellites.ts  SatellitesGroup.ts  Satellites_og.ts  SceneComponent.ts  Stars.ts  Sun.ts  TraceLine.ts  index.ts  meshline.ts  utils.ts
src/native/: Cargo.toml  sgp4.rs
src/native/src/: sgp4.rs
typings/: satellite.d.ts
