[package]
name = "space-junk-native"
version = "1.0.0"
authors = ["Mitchell Loeppky <mitchell@loeppky.com>"]
edition = "2018"
repository = "https://github.com/MixMasterMitch/space-junk"
build = "build.rs"

[lib]
crate-type = ["cdylib"]
path = "sgp4.rs"

[dependencies]
sgp4 = "0.5"
wasm-bindgen = "0.2"
lazy_static = "1.4.0"
js-sys = "0.3.55"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]
